--- a/src/App.css
+++ b/src/App.css
@@ -196,7 +196,7 @@ img {
   grid-gap: 1rem;
 }
 
-.btn {
+/* .btn {
   display: inline-block;
   background: var(--light-color);
   color: #333;
@@ -207,7 +207,7 @@ img {
   margin-right: 0.5rem;
   transition: opacity 0.2s ease-in;
   outline: none;
-}
+} */
 
 .btn-link {
   background: none;
@@ -364,7 +364,6 @@ table th {
 
 .navbar a {
   color: #fff;
-  padding: 0.45rem;
   margin: 0 0.25rem;
 }
 
